[gd_scene load_steps=4 format=3 uid="uid://njc0nj6g72rx"]

[ext_resource type="Script" path="res://LevelButton.gd" id="1_v8c7g"]
[ext_resource type="Texture2D" uid="uid://do8w1121j7s7e" path="res://sprites/ui/locked.png" id="2_mw23l"]
[ext_resource type="Texture2D" uid="uid://jrhju8bs4b23" path="res://sprites/ui/levels/0.png" id="3_okxyj"]

[node name="LevelButton" type="PanelContainer"]
custom_minimum_size = Vector2(160, 120)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_v8c7g")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="Lock" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("2_mw23l")

[node name="Label" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("3_okxyj")
expand_mode = 3

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
